--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./index.js --exec babel-node -e js"
+    "build": "tsc --w",
+    "start": "tsc && ts-node ./dist/index.js"
   },
   "author": "Emmanuel Henri",
   "license": "ISC",
@@ -16,6 +16,10 @@
     "nodemon": "^1.12.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.12",
+    "@types/mongoose": "^5.10.5",
+    "@types/node": "^15.6.1",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1"
